courses/src/main/resources/course-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: course-deployment-pods
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
