courses/src/main/resources/k8s-course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-deployment
  labels:
    app: course-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-deployment-pods
  template:
    metadata:
      name: course-deployment
      labels:
        app: course-deployment-pods
    spec:
      containers:
        - name: course-deployment-container
          image: ogleh/course:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: course-deployment-pods
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
